# stack-graphs

languages/tree-sitter-stack-graphs-python/: Cargo.toml
tree-sitter-stack-graphs/src/cli/: query.rs
